# kbank-poc

./: Dockerfile  LICENSE  README.md  docker-compose.yml  enviroment.yml  environment.yml  fly.toml  main.py  pyproject.toml
.github/workflows/: docker-build.yml
controller/: query_controller.py
graph/: KbankQueryState.py
infra/datasource/llm/prompt/: answer_prompt.yaml  make_decision_prompt.yaml
infra/datasource/vector/: KbankWebVectorIndexer.py  WebVectorIndexer.py
infra/datasource/vector/data/: chroma.sqlite3
service/: langraph_service.py  vectordb_upload_service.py
test/: test_vector_db.py
