[tool.poetry]
name = "kbank-poc"
version = "0.1.0"
description = "decisionmaking platporm"
authors = ["choisunpil <roung4119@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.12"
langchain = "^0.3.22"
langgraph = "^0.3.23"
pytest = "^8.3.5"
sqlmodel = "^0.0.24"
pydantic = "^2.11.1"
dotenv = "^0.9.9"
uvicorn = "^0.34.0"
langsmith = "^0.3.22"
openai = "^1.70.0"
beautifulsoup4 = "^4.13.3"
requests = "^2.32.3"
chromadb = "^0.6.3"
langchain-community = "^0.3.20"
langchain-openai = "^0.3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [ "." ]